add " | The Thaumatorium" to the titles of each page

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>404 Not Found</title>
+	<title>404 Not Found | The Thaumatorium</title>
 	<meta name=description content="Archival & Search available so you can find what you need" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
