--- a/experimentations.html
+++ b/experimentations.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>NostraDavid's HTML, CSS and/or Javascript experimentations</title>
+	<title>NostraDavid's HTML, CSS and/or Javascript experimentations | The Thaumatorium</title>
 	<meta name=description content="Typically it's little HTML, CSS and Javascript tests" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
