--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>NostraDavid's Knowledge Base - Javascript code snippets and regex</title>
+	<title>NostraDavid's Knowledge Base - Javascript code snippets and regex | The Thaumatorium</title>
 	<meta name=description content="Little snippets of information. Usually Javascript or Regex, though I may expand this" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
