--- a/praetorianpi.html
+++ b/praetorianpi.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>Praetorium Pi</title>
+	<title>Praetorium Pi | The Thaumatorium</title>
 	<meta name=description content="You're not supposed to find this page on Google..." />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
