--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>My programming projects, usually made in HTML/CSS/JS</title>
+	<title>My programming projects, usually made in HTML/CSS/JS | The Thaumatorium</title>
 	<meta name=description content="A collection of my projects, small and big" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
