--- a/random-video.html
+++ b/random-video.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>A curated random video</title>
+	<title>A curated random video | The Thaumatorium</title>
 	<meta name=description content="A random video from a curated list of videos" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
