--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>About NostraDavid and the Thaumatorium</title>
+	<title>About NostraDavid and the Thaumatorium | The Thaumatorium</title>
 	<meta name=description content="Information on its creator, the site, and why this site exists" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
