--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>Code of Conduct</title>
+	<title>Code of Conduct | The Thaumatorium</title>
 	<meta name=description content="The rules one should follow on this site's comment section" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
