--- a/hardware.html
+++ b/hardware.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>NostraDavid's Computer hardware and general setup</title>
+	<title>NostraDavid's Computer hardware and general setup | The Thaumatorium</title>
 	<meta name=description content="My hardware setup" />
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
