--- a/projects/fenetres.html
+++ b/projects/fenetres.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fenêtres</title>
+	<title>Fenêtres | The Thaumatorium</title>
 	<style>
 		html,
 		body {
