improve cookie-notification structure

--- a/experimentations.html
+++ b/experimentations.html
@@ -366,8 +366,7 @@
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)>π</a>
 		<div id=cookie-notification>
-			<p>This site uses cookies from Google to deliver its services and to analyze traffic.</p>
-			<button>OK</button>
+			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
 	<script async src=/pwa.js></script>
