rename pwa.js to main.js and move load tag to head; add missing cookie-notification
turns out I forgot to add cookie-notification to template.html... WHOOPS

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<meta name="twitter:image:height" content="668" />
 
 	<!-- <script data-ad-client="ca-pub-7577528621475749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-	<script async src="polyfill.js"></script>
+	<script async src=/main.js></script>
 </head>
 
 <body>
@@ -321,7 +321,7 @@
 
 			const hyvor = document.getElementById("hyvor-talk-view");
 			const toggleComments = (el) => {
-				if(hyvor.innerHTML == "") {
+				if (hyvor.innerHTML == "") {
 					let s = document.createElement('script');
 					s.setAttribute('type', 'text/javascript');
 					s.setAttribute('src', '//talk.hyvor.com/web-api/embed');
@@ -360,7 +360,6 @@
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
-	<script async src=/pwa.js></script>
 </body>
 
 </html>
