--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -14,6 +14,7 @@
 	<noscript>
 		<link rel=stylesheet href="/styles/main.css" />
 	</noscript>
+	<script async src=/main.js></script>
 </head>
 
 <body>
@@ -482,7 +483,6 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
-	<script async src=/pwa.js></script>
 </body>
 
 </html>
