BIG change; moved all .html files in their own folder
Now I don't have to add .html at the end of a URL.

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 	<nav role=navigation>
 		<a href="/">Frontpage</a><span> - </span>
 		<a href=/articles>Articles</a><span> - </span>
-		<a href=/projects.html>Projects</a><span> - </span>
-		<a href=/experimentations.html>Experimentations</a><span> - </span>
-		<a href=/code-of-conduct.html>Code of Conduct</a><span> - </span>
-		<a href=/random-video.html>Random video</a><span> - </span>
-		<a href=/hardware.html>Hardware</a><span> - </span>
-		<a href=/knowledge-base.html>Knowledge Base</a><span> - </span>
-		<a href=/about.html>About</a>
+		<a href=/projects>Projects</a><span> - </span>
+		<a href=/experimentations>Experimentations</a><span> - </span>
+		<a href=/code-of-conduct>Code of Conduct</a><span> - </span>
+		<a href=/random-video>Random video</a><span> - </span>
+		<a href=/hardware>Hardware</a><span> - </span>
+		<a href=/knowledge-base>Knowledge Base</a><span> - </span>
+		<a href=/about>About</a>
 	</nav>
 
 	<main>
@@ -111,15 +111,15 @@
 		<p>This is my handcrafted website, where I write articles and post my projects.</p>
 		<p>Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff thing up. I like to think that <strong>this is how the web is supposed to be</strong>. This site is (for now) a collection of static pages instead of built up by some (C#/JS/PHP/Java) framework.</p>
 		<p>Everything is handcrafted and <em>not</em> minified, something that's usually the case, so if you want to figure out how something works, you can just go and check it out - right click on something and then click "Inspect".</p>
-		<p>If you want to know more about this site, check out the <a href="/about.html">About</a> page.</p>
+		<p>If you want to know more about this site, check out the <a href="/about">About</a> page.</p>
 
 		<h2><a id=top-articles href="#top-articles" class="self-link">Top articles</a></h2>
 		<ul class=article-list>
-			<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit.html>Here is how I fixed the broken system that is Reddit</a></li>
-			<li><a href=/articles/haskells-fold-functions-explained.html>Haskell's fold functions explained</a></li>
-			<li><a href=/articles/spark-files-and-taking-notes.html>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
-			<li><a href=/articles/types-of-haskell-functions.html>The different types of Functional Programming functions</a></li>
-			<li><a href=/articles/quick-n-dirty-big-o.html>Quick 'n Dirty Big O: A short introduction into Big O</a></li>
+			<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit>Here is how I fixed the broken system that is Reddit</a></li>
+			<li><a href=/articles/haskells-fold-functions-explained>Haskell's fold functions explained</a></li>
+			<li><a href=/articles/spark-files-and-taking-notes>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
+			<li><a href=/articles/types-of-haskell-functions>The different types of Functional Programming functions</a></li>
+			<li><a href=/articles/quick-n-dirty-big-o>Quick 'n Dirty Big O: A short introduction into Big O</a></li>
 		</ul>
 
 		<h2><a id=changelog href=#changelog class=self-link>Changelog</a></h2>
