--- a/praetorianpi/index.html
+++ b/praetorianpi/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>404 Not Found | The Thaumatorium</title>
-	<meta name=description content="Archival & Search available so you can find what you need" />
+	<title>Praetorium Pi | The Thaumatorium</title>
+	<meta name=description content="You're not supposed to find this page on Google..." />
+	<link rel="canonical" href="https://thaumatorium.com/praetorianpi">
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
@@ -44,22 +45,12 @@
 	</nav>
 
 	<main>
-		<h1>404 Not Found</h1>
-		<p>You've gone somewhere, where you're not supposed to be! That or I removed the page. It's likely my fault.</p>
-		<p>Give the archives a try: <a id=archive></a></p>
-		<p>Or search the site</p>
-		<!-- created via https://cse.google.com/cse/all -->
-		<script async src="https://cse.google.com/cse.js?cx=007273406661708460536:ir7f8zjh3fd"></script>
-		<div class="gcse-search"></div>
-		<footer>
-			PS: Hit me up (on one of the links in the footer) if any other search engine provides a customized search. This version is by Google, but I'd like to NOT use Google if I could. They already have enough power on the internet.
-		</footer>
-		<script>
-			const target = `https://web.archive.org/${window.location.href}`
-			let archiveLink = document.getElementById("archive");
-			archiveLink.href = target;
-			archiveLink.innerHTML = target;
-		</script>
+		<h1>Sssh - don't tell anyone!</h1>
+			<figure style="border: none; box-shadow: none;">
+				<a href="https://www.youtube.com/watch?v=pXPXMxsXT28">
+					<img loading=lazy width=540 height=960 src="clever.webp" alt="The bad guy from the 'The Net' saying 'clever girl'" /></a>
+				<figcaption>Click the image</figcaption>
+			</figure>
 	</main>
 
 	<footer>
