--- a/404/index.html
+++ b/404/index.html
@@ -5,6 +5,7 @@
 	<meta charset=utf-8 />
 	<title>404 Not Found | The Thaumatorium</title>
 	<meta name=description content="Archival & Search available so you can find what you need" />
+	<link rel="canonical" href="https://thaumatorium.com/404">
 	<meta name=theme-color content=#800 />
 	<link rel=apple-touch-icon href=/images/icons-192.png>
 	<meta name=viewport content="width=device-width, initial-scale=1">
@@ -45,6 +46,7 @@
 
 	<main>
 		<h1>404 Not Found</h1>
+		<p>This is the new page</p>
 		<p>You've gone somewhere, where you're not supposed to be! That or I removed the page. It's likely my fault.</p>
 		<p>Give the archives a try: <a id=archive></a></p>
 		<p>Or search the site</p>
