--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 
 		<h2><a id=top-articles href="#top-articles" class="self-link">Top articles</a></h2>
 		<ul class=article-list>
-			<li><a href=/articles/im-sick-of-all-the-negative-content-on-reddit>Here is how I fixed the broken system that is Reddit</a></li>
+			<li><a href=/articles/how-i-fixed-reddit>How I fixed Reddit</a></li>
 			<li><a href=/articles/haskells-fold-functions-explained>Haskell's fold functions explained</a></li>
-			<li><a href=/articles/spark-files-and-taking-notes>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
-			<li><a href=/articles/types-of-haskell-functions>The different types of Functional Programming functions</a></li>
-			<li><a href=/articles/quick-n-dirty-big-o>Quick 'n Dirty Big O: A short introduction into Big O</a></li>
+			<li><a href=/articles/spark-files-and-keeping-track-of-your-ideas-concepts-thoughts>Spark files and keeping track of your ideas, concepts & thoughts</a></li>
+			<li><a href=/articles/the-different-types-of-functions-in-functional-programming>The different types of functions in Functional Programming</a></li>
+			<li><a href=/articles/big-o-beginners-guide>Big O Beginner's Guide</a></li>
 		</ul>
 
 		<h2><a id=changelog href=#changelog class=self-link>Changelog</a></h2>
