initially hide cookie notification, but show when not accepted
This way the notification won't pop up for a split second when the user has already OKed the notification.
It was an annoying flash, IMO.

--- a/knowledge-base/index.html
+++ b/knowledge-base/index.html
@@ -480,7 +480,7 @@ listedEmoticons.sort((a, b) => b.length - a.length)
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)>π</a>
-		<div id=cookie-notification>
+		<div id=cookie-notification style="display: none">
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
