--- a/praetorianpi/index.html
+++ b/praetorianpi/index.html
@@ -70,7 +70,7 @@
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)>π</a>
-		<div id=cookie-notification>
+		<div id=cookie-notification style="display: none">
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
