make more images lazy load (especially the footer images)

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -46,7 +46,7 @@
 
 	<main>
 		<h1>The comment section's Code of Conduct</h1>
-		<img src=conduct.webp alt="the Code of Conduct for this site">
+		<img loading=lazy src=conduct.webp alt="the Code of Conduct for this site">
 		<p>No really, that's it. I currently don't see the need to expand on this image.</p>
 	</main>
 
