--- a/experimentations/index.html
+++ b/experimentations/index.html
@@ -228,15 +228,15 @@
 			}
 		</style>
 		<p>smooth</p>
-		<img class=s src=wc1.png width=640 />
+		<img loading=lazy class=s src=wc1.png width=640 />
 		<p>high-quality</p>
-		<img class=hq src=wc2.png width=640 />
+		<img loading=lazy class=hq src=wc2.png width=640 />
 		<p>crisp-edges - this looks broken :(</p>
-		<img class=ce src=wc3.png width=640 />
+		<img loading=lazy class=ce src=wc3.png width=640 />
 		<p>pixelated</p>
-		<img class=pi src=wc4.png width=640 />
+		<img loading=lazy class=pi src=wc4.png width=640 />
 		<p>default</p>
-		<img src=wc5.png width=640 />
+		<img loading=lazy src=wc5.png width=640 />
 		<h2>font weirdness</h2>
 		<style>
 			p.weird {
