--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 			a = d.getElementsByTagName(s)[0];
 			e.async = true;
 			e.src = u;
+			e.crossorigin="anonymous";
 			a.parentNode.insertBefore(e, a)
 		})(window, document, "galite", "script", "https://cdn.jsdelivr.net/npm/ga-lite@2/dist/ga-lite.min.js");
 
@@ -95,6 +96,7 @@
 	</header>
 
 	<nav role=navigation>
+		<h5 style="display: none;">Main nav menu</h5>
 		<a href="/">Frontpage</a><span> - </span>
 		<a href=/articles>Articles</a><span> - </span>
 		<a href=/projects>Projects</a><span> - </span>
@@ -347,7 +349,7 @@
 			<p><sub>Last updated: <time id=updated>2020-__-__</time></sub></p>
 		</div>
 		<nav id=profiles>
-			<p>Media profiles</p>
+			<h4>Media profiles</h4>
 			<a href="https://www.reddit.com/user/nostradavid"><img loading=lazy src="/images/social-media/reddit.svg" alt="Snoo, Reddit's logo" width=32 height=32></a><span> - </span>
 			<a href="https://twitter.com/DavidNostra"><img loading=lazy src="/images/social-media/twitter.svg" alt="Twitter's logo" width=32 height=32></a><span> - </span>
 			<a href="https://github.com/NostraDavid"><img loading=lazy src="/images/social-media/github.svg" alt="Twitter's logo" width=32 height=32>(me)</a><span> - </span>
