improve support chapter on frontpage

--- a/index.html
+++ b/index.html
@@ -239,8 +239,23 @@
 		</details>
 
 		<h2><a id=support href=#support class=self-link>Support</a></h2>
-		<h3><a id=support-ko-fi href=#support-ko-fi class=self-link>Ko-fi</a></h3>
+		<h3><a id=twitch href=#twitch class=self-link>Twitch</a></h3>
+		<figure>
+			<a href="https://www.twitch.tv/nostradavid">
+				<img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=64>
+			</a>
+			<figcaption>Come watch me livestream World of Warcraft on Twitch!</figcaption>
+		</figure>
 
+		<h3><a id=youtube href=#youtube class=self-link>Youtube</a></h3>
+		<figure>
+			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA">
+				<img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=64>
+			</a>
+			<figcaption>Go watch some clips from previous livestreams that I've edited for Youtube</figcaption>
+		</figure>
+
+		<h3><a id=support-ko-fi href=#support-ko-fi class=self-link>Ko-fi</a></h3>
 		<figure>
 			<a href=https://ko-fi.com/J3J61VMSC rel=noopener target=_blank>
 				<img loading=lazy width=223 height=30 src="/images/ko-fi-support.svg" alt='Buy Me a Coffee at ko-fi.com' />
