improve intro on frontpage

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			a = d.getElementsByTagName(s)[0];
 			e.async = true;
 			e.src = u;
-			e.crossorigin="anonymous";
+			e.crossorigin = "anonymous";
 			a.parentNode.insertBefore(e, a)
 		})(window, document, "galite", "script", "https://cdn.jsdelivr.net/npm/ga-lite@2/dist/ga-lite.min.js");
 
@@ -109,9 +109,9 @@
 
 	<main>
 		<h1>Welcome to the Thaumatorium!</h1>
-		<p>This is my handcrafted website, where I write articles and post my projects.</p>
-		<p>Note that this site is pure uncompressed HTML/CSS/JS, with some PNG and WEBP images to fluff thing up. I like to think that <strong>this is how the web is supposed to be</strong>. This site is (for now) a collection of static pages instead of built up by some (C#/JS/PHP/Java) framework.</p>
-		<p>Everything is handcrafted and <em>not</em> minified, something that's usually the case, so if you want to figure out how something works, you can just go and check it out - right click on something and then click "Inspect".</p>
+		<p>This is my handcrafted website. I post <a href="/articles">articles</a>, <a href="/knowledge-base">bits of knowledge</a>, <a href="/projects">projects</a> and <a href="/experimentations">experimentations</a></p>
+		<p>If you want the source of this site (the static HTML, CSS, images and JS), check out <a href="https://github.com/Thaumatorium/thaumatorium.github.io">the Github page</a></p>
+		<p>My work on the site has died down, due to a case of Empty Bank Account (don't worry, it's not contagious), not to mention I'm starting a <a href="https://www.twitch.tv/nostradavid"><img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=16 height=16></a><a href="https://www.twitch.tv/nostradavid">Twitch Channel</a></p>
 		<p>If you want to know more about this site, check out the <a href="/about">About</a> page.</p>
 
 		<h2><a id=top-articles href="#top-articles" class="self-link">Top articles</a></h2>
