--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 		<p>Important changes and when they happened.</p>
 		<p>Initially things changed too drastically and too fast to keep a changelog, but I think it's time for one.</p>
 		<p>Everything previous the creation of this list has been copied from the Git history.</p>
+
 		<ul>
 			<li><time>2020-08-15</time> Added (optional) syntax highlighting for Haskell in the <q>Quick 'n Dirty Big O</q> article</li>
 			<li><time>2020-08-07</time> Comment section on the front page is now hidding behind a button to improve load times.</li>
@@ -135,45 +136,53 @@
 			<li><time>2020-08-07</time> Details (those clickable things with the ▶ symbol) can now be mass opened via a button</li>
 			<li><time>2020-08-07</time> Removed <q>Regex Explanation</q>, as it was too simple for my current knowledge. Maybe I'll revive it in an article</li>
 			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <samp>-</code>'s.</li>
-			<li><time>2020-08-06</time> Added <q>Information for a secret project</q> to the Knowledge Base</li>
-			<li><time>2020-08-04</time> Improved <q>404 Not Found</q> page</li>
-			<li><time>2020-08-04</time> Changed the <q>Article</q> page into an actual list</li>
-			<li><time>2020-08-04</time> Changed the titles of a bunch of articles. URLs are still the same</li>
-			<li><time>2020-08-03</time> Added <q>National 'warcry'</q> table to the Knowledge Base</li>
-			<li><time>2020-07-26</time> Added <q>Top Articles</q> to frontpage</li>
-			<li><time>2020-07-26</time> Added <q>Configuring JMeter for Neo4j</q> article</li>
-			<li><time>2020-07-16</time> <strong>Added Changelog to frontpage</strong></li>
-			<li><time>2020-07-16</time> Added <q>Knowledge Base</q> page</li>
-			<li><time>2020-07-15</time> Created <q>𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢𝔯 (Germanizer)</q> project</li>
-			<li><time>2020-07-15</time> Created <q>Text to Emoji</q> project</li>
-			<li><time>2020-07-13</time> Added <q>Hardware</q> page</li>
-			<li><time>2020-07-08</time> Removed PWA functionality (updating was too much of a pain)</li>
-			<li><time>2020-07-07</time> Titles are now linkable (via a hash in the URL/section sign (§) combo)</li>
-			<li><time>2020-07-07</time> TODO now has timestamps</li>
-			<li><time>2020-07-06</time> Added <a href="https://talk.hyvor.com/"><q>Hyvor</q></a> comment system to frontpage</li>
-			<li><time>2020-07-04</time> Added Google Analytics to the site (With a cookie notification. Wish I didn't need it, but they're legally required)</li>
-			<li><time>2020-07-03</time> Added <q>footer links</q></li>
-			<li><time>2020-07-03</time> Added metadata to the frontpage for Facebook and Twitter, so when posting a link to FB/T you get a nice looking card</li>
-			<li><time>2020-07-02</time> Added <q>Random Video</q> page (it contains a few of my favorite videos)</li>
-			<li><time>2020-07-01</time> Added an image of the most important person since the existence of nations to the GitHub repo</li>
-			<li><time>2020-07-01</time> Added <q>Reddit's T-values</q> article</li>
-			<li><time>2020-06-30</time> Added <q>/g/'s programming projects</q> article</li>
-			<li><time>2020-06-12</time> Added (Static) sitemap.xml</li>
-			<li><time>2020-06-11</time> Added search and archive functionality to <q>404 page</q></li>
-			<li><time>2020-06-11</time> Added PWA functionality! Site can now be used, even if you don't have any internet connection available!</li>
-			<li><time>2020-06-11</time> Added <q>Experimentations</q> page</li>
-			<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/"><q>my old blog</q></a></li>
-			<li><time>2020-05-09</time> Added <q>Slugify</q> project</li>
-			<li><time>2020-05-09</time> Added <q>Starfield</q> project</li>
-			<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator"><q>MSTG</q></abbr> project</li>
-			<li><time>2020-05-09</time> Added <q>ROT13</q> project</li>
-			<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but not the site)</li>
-			<li><time>2020-05-09</time> Added extension recommendations for when you open the <samp>thaumatorium.github.io</samp> folder (for when you download the repo)</li>
-			<li><time>2020-05-03</time> Replaced the bare <q>Elm</q> version of this site with the static HTML - including some easter eggs :^)</li>
-			<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/"><q>HTML Living Standard</q></a> and most of the <a href="https://www.w3.org/TR/CSS/#css"><q>CSS spec</q></a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
-			<li><time>2019-10-24</time> Got the <q>Elm</q> version of the site working</li>
-			<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <samp>index.html</samp></li>
 		</ul>
+
+		<details>
+			<summary>
+				<h3>Older changelog</h3>
+			</summary>
+			<ul>
+				<li><time>2020-08-06</time> Added <q>Information for a secret project</q> to the Knowledge Base</li>
+				<li><time>2020-08-04</time> Improved <q>404 Not Found</q> page</li>
+				<li><time>2020-08-04</time> Changed the <q>Article</q> page into an actual list</li>
+				<li><time>2020-08-04</time> Changed the titles of a bunch of articles. URLs are still the same</li>
+				<li><time>2020-08-03</time> Added <q>National 'warcry'</q> table to the Knowledge Base</li>
+				<li><time>2020-07-26</time> Added <q>Top Articles</q> to frontpage</li>
+				<li><time>2020-07-26</time> Added <q>Configuring JMeter for Neo4j</q> article</li>
+				<li><time>2020-07-16</time> <strong>Added Changelog to frontpage</strong></li>
+				<li><time>2020-07-16</time> Added <q>Knowledge Base</q> page</li>
+				<li><time>2020-07-15</time> Created <q>𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢𝔯 (Germanizer)</q> project</li>
+				<li><time>2020-07-15</time> Created <q>Text to Emoji</q> project</li>
+				<li><time>2020-07-13</time> Added <q>Hardware</q> page</li>
+				<li><time>2020-07-08</time> Removed PWA functionality (updating was too much of a pain)</li>
+				<li><time>2020-07-07</time> Titles are now linkable (via a hash in the URL/section sign (§) combo)</li>
+				<li><time>2020-07-07</time> TODO now has timestamps</li>
+				<li><time>2020-07-06</time> Added <a href="https://talk.hyvor.com/"><q>Hyvor</q></a> comment system to frontpage</li>
+				<li><time>2020-07-04</time> Added Google Analytics to the site (With a cookie notification. Wish I didn't need it, but they're legally required)</li>
+				<li><time>2020-07-03</time> Added <q>footer links</q></li>
+				<li><time>2020-07-03</time> Added metadata to the frontpage for Facebook and Twitter, so when posting a link to FB/T you get a nice looking card</li>
+				<li><time>2020-07-02</time> Added <q>Random Video</q> page (it contains a few of my favorite videos)</li>
+				<li><time>2020-07-01</time> Added an image of the most important person since the existence of nations to the GitHub repo</li>
+				<li><time>2020-07-01</time> Added <q>Reddit's T-values</q> article</li>
+				<li><time>2020-06-30</time> Added <q>/g/'s programming projects</q> article</li>
+				<li><time>2020-06-12</time> Added (Static) sitemap.xml</li>
+				<li><time>2020-06-11</time> Added search and archive functionality to <q>404 page</q></li>
+				<li><time>2020-06-11</time> Added PWA functionality! Site can now be used, even if you don't have any internet connection available!</li>
+				<li><time>2020-06-11</time> Added <q>Experimentations</q> page</li>
+				<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/"><q>my old blog</q></a></li>
+				<li><time>2020-05-09</time> Added <q>Slugify</q> project</li>
+				<li><time>2020-05-09</time> Added <q>Starfield</q> project</li>
+				<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator"><q>MSTG</q></abbr> project</li>
+				<li><time>2020-05-09</time> Added <q>ROT13</q> project</li>
+				<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but not the site)</li>
+				<li><time>2020-05-09</time> Added extension recommendations for when you open the <samp>thaumatorium.github.io</samp> folder (for when you download the repo)</li>
+				<li><time>2020-05-03</time> Replaced the bare <q>Elm</q> version of this site with the static HTML - including some easter eggs :^)</li>
+				<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/"><q>HTML Living Standard</q></a> and most of the <a href="https://www.w3.org/TR/CSS/#css"><q>CSS spec</q></a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
+				<li><time>2019-10-24</time> Got the <q>Elm</q> version of the site working</li>
+				<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <samp>index.html</samp></li>
+			</ul>
+		</details>
 
 		<h2><a id=todo href=#todo class=self-link>TODO</a></h2>
 		<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
@@ -183,31 +192,40 @@
 			<li><time>2020-08-14</time> rewrite the <q>Quick 'n dirty Big O</q> article. I think I've outgrown it.</li>
 			<li><time>2020-08-14</time> Figure out how Qwibus Amersfoort has their nav menu on Google</li>
 			<li><time>2020-08-11</time> Create an "htmlest" page, that contains *all* HTML elements, in a sensible way. Ofcourse add a ton of comments to explain the element names (like dt, dl, etc)</li>
-			<li><time>2020-08-10</time> Create World of Warcraft TODO so I can plan the things I still want to do/play/find</li>
-			<li><time>2020-08-08</time> Move Changelog and TODO to their own pages, but keep the top 5 or so on the FP.</li>
-			<li><time>2020-08-07</time> Create an article that explains basic Twitch emotes (monkaS/monkaW, pepeD/pepeJAM/catJAM, WutFace, etc)</li>
-			<li><time>2020-08-07</time> Add a Settings page where the user can change cookie settings - show which cookies are set, show how the user can check which cookies are set for Chrome/Edge/Firefox, etc</li>
-			<li><time>2020-08-07</time> Enable the use of query strings and cookies to manipulate how the site looks (enable/disable comments, enable disable disclaimers)</li>
-			<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.</li>
-			<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).</li>
-			<li><time>2020-08-04</time> Create an article where I explain how I created this site. Use keywords to improve the pull to this site.</li>
-			<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code class=lang-html>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.</li>
-			<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]</li>
-			<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"</li>
-			<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"</li>
-			<li><time>2020-07-25</time> Create a<del>n Ubuntu</del> Bash Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
-			<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
-			<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
-			<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
-			<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
-			<li><time>2020-07-03</time> Add JSON/LD - Semantic Web stuff to the homepage</li>
-			<li><time>2020-07-03</time> Consider paypal.me</li>
-			<li><time>2020-07-03</time> Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in 2009 (about how and where to start with programming)</li>
-			<li><time>2020-05-09</time> Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
 		</ul>
+		<details>
+			<summary>
+				<h3>older TODO</h3>
+			</summary>
+			<ul>
+				<li><time>2020-08-10</time> Create World of Warcraft TODO so I can plan the things I still want to do/play/find</li>
+				<li><time>2020-08-08</time> Move Changelog and TODO to their own pages, but keep the top 5 or so on the FP.</li>
+				<li><time>2020-08-07</time> Create an article that explains basic Twitch emotes (monkaS/monkaW, pepeD/pepeJAM/catJAM, WutFace, etc)</li>
+				<li><time>2020-08-07</time> Add a Settings page where the user can change cookie settings - show which cookies are set, show how the user can check which cookies are set for Chrome/Edge/Firefox, etc</li>
+				<li><time>2020-08-07</time> Enable the use of query strings and cookies to manipulate how the site looks (enable/disable comments, enable disable disclaimers)</li>
+				<li><time>2020-08-04</time> Add FB/Twitter metadata to all other pages, especially the Template page.</li>
+				<li><time>2020-08-04</time> Add canonical links to all other pages (other than the frontpage).</li>
+				<li><time>2020-08-04</time> Create an article where I explain how I created this site. Use keywords to improve the pull to this site.</li>
+				<li><time>2020-08-04</time> Add meta tag for keywords to each page. <code class=lang-html>&lt;meta name="keywords" content="Keyword1, Keyword2, Keyword3"&gt;</code> At the very least it won't hurt.</li>
+				<li><time>2020-08-03</time> Create a Twitch addon that shows a counted and then sorted list of emotes from chat: [12x LULW, 6x LUL, 4x Pogey, 4x KKomando, 4xlowZ, 1x asmonMcCool]</li>
+				<li><time>2020-08-03</time> Write an article that explains recursion, without using the word recursion: "How to loop without the for loop construct [RECURSION GONE WILD]"</li>
+				<li><time>2020-07-30</time> Write software reviews: Go in-depth into software. Don't just "oh you can do xyz". What are some neat features/options you can find deep in the depths of the menus? I can call it "Let's talk about X"</li>
+				<li><time>2020-07-25</time> Create a<del>n Ubuntu</del> Bash Beginner Guide, with commands I wish I knew when I started. Try to make it 1 or 2 A4's large.</li>
+				<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
+				<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
+				<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
+				<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
+				<li><time>2020-07-03</time> Add JSON/LD - Semantic Web stuff to the homepage</li>
+				<li><time>2020-07-03</time> Consider paypal.me</li>
+				<li><time>2020-07-03</time> Check my Spark files for article inspiration. I believe I was still going to write a letter to myself in 2009 (about how and where to start with programming)</li>
+				<li><time>2020-05-09</time> Gotta check out ARIA tags - they weren't really mentioned on WHATWG's Living Document</li>
+			</ul>
+		</details>
 
 		<details>
-			<summary>Done</summary>
+			<summary>
+				<h3>Done</h3>
+			</summary>
 			<ul>
 				<li><time>2020-08-07</time> <del>Hide comments by default and add a button to load/show them - save this setting in a cookie.</del></li>
 				<li><time>2020-07-13</time> <del>Improve the Issue page on GitHub by adding a template.</del></li>
@@ -242,7 +260,7 @@
 		<h3><a id=twitch href=#twitch class=self-link>Twitch</a></h3>
 		<figure>
 			<a href="https://www.twitch.tv/nostradavid">
-				<img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=64>
+				<img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=128>
 			</a>
 			<figcaption>Come watch me livestream World of Warcraft on Twitch!</figcaption>
 		</figure>
@@ -250,7 +268,7 @@
 		<h3><a id=youtube href=#youtube class=self-link>Youtube</a></h3>
 		<figure>
 			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA">
-				<img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=64>
+				<img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=128>
 			</a>
 			<figcaption>Go watch some clips from previous livestreams that I've edited for Youtube</figcaption>
 		</figure>
