--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
 		<link rel=stylesheet href="/styles/main.css" />
 	</noscript>
 
-	<!-- If I ever make this site dynamically: FB uses a specific agent string (something like 'facebookexternalhit/1.1'). No need to show this to regular users. -->
-	<meta property="fb:app_id" content="939311653206712">
-
 	<!-- General OpenGraph data - shared between Facebook and Twitter -->
 	<meta property="og:url" content="https://thaumatorium.com/" />
 	<meta property="og:type" content="website" />
@@ -382,13 +379,12 @@
 		</div>
 		<nav id=profiles>
 			<h4>Media profiles</h4>
-			<a href="https://twitter.com/DavidNostra"><img loading=lazy src="/images/social-media/twitter.svg" alt="Twitter's logo" width=32 height=32></a><span> - </span>
+			<a href="https://twitter.com/NostraDavid2"><img loading=lazy src="/images/social-media/twitter.svg" alt="Twitter's logo" width=32 height=32></a><span> - </span>
 			<a href="https://www.twitch.tv/nostradavid"><img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=32 height=32></a> - </span>
 			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA"><img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=32 height=32></a> - </span>
 			<a href="https://www.reddit.com/user/nostradavid"><img loading=lazy src="/images/social-media/reddit.svg" alt="Snoo, Reddit's logo" width=32 height=32></a><span> - </span>
 			<a href="https://github.com/NostraDavid"><img loading=lazy src="/images/social-media/github.svg" alt="Github's logo" width=32 height=32>(me)</a><span> - </span>
 			<a href="https://github.com/Thaumatorium"><img loading=lazy src="/images/social-media/github.svg" alt="Github's logo" width=32 height=32>(pro)</a><span> - </span>
-			<a href="https://www.facebook.com/david.nostra.121"><img loading=lazy src="/images/social-media/facebook.svg" alt="Facebook's logo" width=32 height=32></a>
 		</nav>
 		<!-- Sssh - don't tell anyone! -->
 		<a class=secret onclick=specialGoto(event)>π</a>
@@ -396,6 +392,11 @@
 			<p>This site uses cookies from Google to deliver its services and to analyze traffic. <button>OK</button></p>
 		</div>
 	</footer>
+
+	<aside>
+		<iframe frameborder="0" scrolling="no" src="https://www.twitch.tv/embed/nostradavid/chat?parent=thaumatorium.com" height="840px" width="340px"></iframe>
+		<iframe frameborder="0" scrolling="no" src="https://www.twitch.tv/embed/nostradavid/chat?parent=127.0.0.1" height="840px" width="340px"></iframe>
+	</aside>
 	<script async src=/main.js></script>
 </body>
 
