add heights to images to prevent page shifting

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 		<h3><a id=twitch href=#twitch class=self-link>Twitch</a></h3>
 		<figure>
 			<a href="https://www.twitch.tv/nostradavid">
-				<img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=128>
+				<img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=128 height=145.12 />
 			</a>
 			<figcaption>Come watch me livestream World of Warcraft on Twitch!</figcaption>
 		</figure>
@@ -265,7 +265,7 @@
 		<h3><a id=youtube href=#youtube class=self-link>Youtube</a></h3>
 		<figure>
 			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA">
-				<img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=128>
+				<img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=128 height=90.49>
 			</a>
 			<figcaption>Go watch some clips from previous livestreams that I've edited for Youtube</figcaption>
 		</figure>
