--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			<p>Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!</p>
 		</figure>
 
-		<h3><a id=support-crypto href=#support-crypto class=self-link>Crypto</a></h3>
+		<!-- <h3><a id=support-crypto href=#support-crypto class=self-link>Crypto</a></h3>
 		<p>
 			<script>
 				const showCrypto = () => {
@@ -339,7 +339,7 @@
 			<img loading=lazy width=200 height=200 src=/images/crypto/doge.png alt="My Doge address in the form of a QR code" />
 			<p>Doge</p>
 			<p class=crypto-address>DHbW72pYTog8GnuugZ1UXib5YmEv8ws4Ba</p>
-		</figure>
+		</figure> -->
 
 		<h2><a id=comments href=#comments class=self-link>Comments</a></h2>
 		<div>
