fix twitter meta creator name
DavidNostra -> NostraDavid2

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 	<!-- Twitter-only stuff -->
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@DavidNostra" />
-	<meta name="twitter:creator" content="@DavidNostra" />
+	<meta name="twitter:site" content="@NostraDavid2" />
+	<meta name="twitter:creator" content="@NostraDavid2" />
 	<meta name="twitter:title" content="NostraDavid's handcrafted website, with his articles and projects">
 	<meta name="twitter:description" content="A handcrafted blog where you can find articles and projects created by NostraDavid.">
 	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
