Nu Html Checker
https://validator.w3.org/nu/?showsource=yes&showoutline=yes&showimagereport=yes&doc=https%3A%2F%2Fthaumatorium.com

--- a/SemanticOverrideNetwork/index.html
+++ b/SemanticOverrideNetwork/index.html
@@ -39,7 +39,7 @@
 		<div class=subtitle>Social News Aggregator</div>
 	</header>
 
-	<nav role=navigation>
+	<nav>
 		<span>Yes, the main menu is broken for now: </span>
 		<a href="/">Frontpage</a><span> - </span>
 		<a href=/posts>Posts</a><span> - </span>
