--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class=subtitle>Where the magic happens</div>
 	</header>
 
-	<nav role=navigation>
+	<nav>
 		<h5 style="display: none;">Main nav menu</h5>
 		<a href="/">Frontpage</a><span> - </span>
 		<a href=/articles>Articles</a><span> - </span>
@@ -98,7 +98,7 @@
 			<li><time>2020-08-07</time> Changed the links in the footer with the icons of the respective site</li>
 			<li><time>2020-08-07</time> Details (those clickable things with the ▶ symbol) can now be mass opened via a button</li>
 			<li><time>2020-08-07</time> Removed <q>Regex Explanation</q>, as it was too simple for my current knowledge. Maybe I'll revive it in an article</li>
-			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <samp>-</code>'s.</li>
+			<li><time>2020-08-07</time> Improved <q>Slugify</q>; it now removed duplicate <samp>-</samp>'s.</li>
 		</ul>
 
 		<details>
@@ -345,8 +345,8 @@
 		</div>
 		<nav id=profiles>
 			<a href="https://twitter.com/NostraDavid2"><img loading=lazy src="/images/social-media/twitter.svg" alt="Twitter's logo" width=32 height=32></a><span> - </span>
-			<a href="https://www.twitch.tv/nostradavid"><img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=32 height=32></a> - </span>
-			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA"><img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=32 height=32></a> - </span>
+			<a href="https://www.twitch.tv/nostradavid"><img loading=lazy src="/images/social-media/twitch.svg" alt="Twitch's logo" width=32 height=32></a><span> - </span>
+			<a href="https://www.youtube.com/channel/UCkyJNAlG_at0jgflXPP4aKA"><img loading=lazy src="/images/social-media/youtube.svg" alt="Youtube's logo" width=32 height=32></a><span> - </span>
 			<a href="https://www.reddit.com/user/nostradavid"><img loading=lazy src="/images/social-media/reddit.svg" alt="Snoo, Reddit's logo" width=32 height=32></a><span> - </span>
 			<a href="https://github.com/NostraDavid"><img loading=lazy src="/images/social-media/github.svg" alt="Github's logo" width=32 height=32>(me)</a><span> - </span>
 			<a href="https://github.com/Thaumatorium"><img loading=lazy src="/images/social-media/github.svg" alt="Github's logo" width=32 height=32>(pro)</a><span> - </span>
